# RL_and_signatures

./: CODE_REVIEW.md  main_unified.py  pyproject.toml  run_sweep.sh
conf/: config.yaml  config_CSAC.yaml  config_base_jax.yaml  config_signatures.yaml  config_signatures_MG.yaml  config_unified.yaml
conf/agent/: CSAC_jax.yaml  CTAC_actor_oracle.yaml  CTAC_critic_oracle.yaml  CTAC_jax.yaml  CTAC_jax_mackey_glass.yaml  CTAC_sig_MG_1D.yaml  CTAC_sig_chemical.yaml  CTAC_sig_jax.yaml  CTAC_simple.yaml  base_jax.yaml  csac.yaml  sanity_check_actor.yaml  signature_jax.yaml  signatures.yaml  value_gradient.yaml
conf/env/: MG_1D.yaml  chemical_reaction_4D.yaml  delay_jax.yaml  delay_jax_unstable.yaml  harmonic_oscillator.yaml  harmonic_oscillator_rk.yaml  harmonic_oscillator_rk_jax.yaml  sanity_chack_jax.yaml  sanity_check_actor.yaml  stable_non_normal_2D.yaml  unstable_2D_env.yaml  unstable_oscillator_delay.yaml
conf/launcher/: local.yaml  slurm.yaml
legacy_code/: CT_actor_sanity_check.py  CT_critic_sanity_check.py  env_rk.py  registry.py  test_env_rk4.py
run/MG_transient/: run_comparison_delay.py  run_comparison_transient.py  run_comparison_window_size.py
run/chemical/: run_comparison_chemical.py
run_experiments/MG_comparison/: README.md  run_all_parallel.sh  run_exp1_signatures.sh  run_exp2_no_signatures.sh  run_exp3_augmented_state.sh  run_exp4_value_gradient.sh  run_exp5_whole_state.sh
run_experiments/MG_comparison_tau_slurm/: README.md  run_comparison.py  (+1 more)
src/: chemical_process.py  configs.py  env_rk.py  integral_volterra.py  mackey_glass_1D.py
(+38 files in other folders)
